--- a/MicroBooNE.tex
+++ b/MicroBooNE.tex
@@ -54,3 +54,5 @@ Further down the beamline is a concrete collimator which absorbs particles not n
 \label{fig:figures}
 \caption{\ref{fig:bnbflux} Flux of BNB at FNAL.}
 \end{figure}
+
+\section{Event Reconstruction}
