--- a/neutrinoID.tex
+++ b/neutrinoID.tex
@@ -104,3 +104,6 @@ The resulting neutrino/cosmic event rate per day is shown in table \ref{table:ev
 \caption{Percent matched cluster pairs remaining for neutrinos and cosmics after secondary cuts applied. This is relative to the number of events that contain clusters which pass the primary cuts.}
 \label{fig:2dsecondarycuts}
 \end{figure}
+
+\section{3D Tracks and vertices Selection}
+The neutrino selection for the 3D channel was based on trios of a reconstructed vertex and two tracks. 
