--- a/example.tex
+++ b/example.tex
@@ -126,9 +126,9 @@ Syracuse, New York
 \end{mainmatter}
 
 %% Produce the appendices
-\begin{appendices}
-  \input{appendices}
-\end{appendices}
+%\begin{appendices}
+%  \input{appendices}
+%\end{appendices}
 
 %% Produce the un-numbered back matter (e.g. colophon,
 %% bibliography, tables of figures etc., index...)
