--- a/cnn_train.tex
+++ b/cnn_train.tex
@@ -85,3 +85,158 @@ Figure \ref{fig:CNN_train} show a breakdown of $\mu/\pi$ separation for CNN10000
 %\end{figure}
 
 \subsection{Training CNN100000}
+
+\begin{figure}[htp]
+\centering
+\includegraphics[width=.8\linewidth=]{../images/confusion_allparticle_v3.pdf}
+\caption{Confusion Matrix of all five particles }
+\label{fig:confusion100000}
+\end{figure}
+
+\begin{figure}[htp]
+\centering
+\includegraphics[width=.8\linewidth=]{../images/GPU_9010split_hires_iterations_alldata_allparticle.png}
+\caption{Training and testing accuracy of CNN trained on 100,000 images of \mu/\pi/p/\gamma/e with 20,000 images of each particle. Each image was a size of 576x576 and the images per particle were split 90\% use for training and 10\% used for testing the network}
+\label{fig:gpuacc}
+\end{figure}
+
+\begin{figure}[htp]
+\centering
+\includegraphics[width=.8\linewidth=]{../images/GPU_9010split_hires_iterations_alldata_allparticle_loss.png}
+\caption{Training and testing loss oc CNN trained on 100,000 images of \mu/\pi/p/\gamma/e}
+\label{fig:gpuloss}
+\end{figure}
+
+\begin{figure}[htp]
+\centering
+\includegraphics[width=.8\linewidth=]{../csv_output/true_labels_1102.png}
+\caption{t-SNE of CNN}
+\label{fig:tsne}
+\end{figure}
+
+\begin{figure}[htp]
+\centering
+\includegraphics[width=.8\linewidth=]{../csv_output/muon_prob.png}
+\caption{Muon Prob}
+\label{fig:muonprob}
+\end{figure}
+
+\begin{figure}[htp]
+\centering
+\includegraphics[width=.8\linewidth=]{../csv_output/pi_prob.png}
+\caption{Pion Prob}
+\label{fig:piprob}
+\end{figure}
+
+\begin{figure}[htp]
+\centering
+\includegraphics[width=.8\linewidth=]{../csv_output/proton_prob.png}
+\caption{Proton Prob}
+\label{fig:protonprob}
+\end{figure}
+
+\begin{figure}[htp]
+\centering
+\includegraphics[width=.8\linewidth=]{../csv_output/eminus_prob.png}
+\caption{Electron Prob}
+\label{fig:eminusprob}
+\end{figure}
+
+\begin{figure}[htp]
+\centering
+\includegraphics[width=.8\linewidth=]{../csv_output/gamma_prob.png}
+\caption{Gamma Prob}
+\label{fig:gammaprob}
+\end{figure}
+
+\begin{figure}[htp]
+\centering
+\includegraphics[width=.8\linewidth=]{../csv_output/prob_allparticle_normalized.pdf}
+\caption{Prob}
+\label{fig:prob}
+\end{figure}
+
+\begin{figure}[htp]
+\centering
+\includegraphics[width=.8\linewidth=]{../csv_output/mu_pi_acc_tracklength_all.pdf}
+\caption{mupi}
+\label{fig:mu_pi}
+\end{figure}
+
+\begin{figure}[htp]
+\centering
+\includegraphics[width=.8\linewidth=]{../csv_output/mu_pi_acc_tracklength_75.pdf}
+\caption{mupi}
+\label{fig:mu_pi}
+\end{figure}
+
+\begin{figure}[htp]
+\centering
+\includegraphics[width=.8\linewidth=]{../csv_output/mu_pi_acc_momentum.pdf}
+\caption{mupi}
+\label{fig:mu_pi}
+\end{figure}
+
+\begin{figure}[htp]
+\centering
+\includegraphics[width=.8\linewidth=]{../csv_output/mu_p_acc_tracklength_all.pdf}
+\caption{mup}
+\label{fig:mu_p}
+\end{figure}
+
+\begin{figure}[htp]
+\centering
+\includegraphics[width=.8\linewidth=]{../csv_output/mu_p_acc_tracklength_75.pdf}
+\caption{mup}
+\label{fig:mu_p}
+\end{figure}
+
+\begin{figure}[htp]
+\centering
+\includegraphics[width=.8\linewidth=]{../csv_output/mu_p_acc_momentum.pdf}
+\caption{mup}
+\label{fig:mu_p}
+\end{figure}
+
+\begin{figure}[htp]
+\centering
+\includegraphics[width=.8\linewidth=]{../csv_output/mu_e_acc_tracklength_all.pdf}
+\caption{mue}
+\label{fig:mu_e}
+\end{figure}
+
+\begin{figure}[htp]
+\centering
+\includegraphics[width=.8\linewidth=]{../csv_output/mu_e_acc_tracklength_75.pdf}
+\caption{mue}
+\label{fig:mu_e}
+\end{figure}
+
+\begin{figure}[htp]
+\centering
+\includegraphics[width=.8\linewidth=]{../csv_output/mu_e_acc_momentum.pdf}
+\caption{mue}
+\label{fig:mu_e}
+\end{figure}
+
+\begin{figure}[htp]
+\centering
+\includegraphics[width=.8\linewidth=]{../csv_output/mu_g_acc_tracklength_all.pdf}
+\caption{mug}
+\label{fig:mu_g}
+\end{figure}
+
+\begin{figure}[htp]
+\centering
+\includegraphics[width=.8\linewidth=]{../csv_output/mu_g_acc_tracklength_75.pdf}
+\caption{mug}
+\label{fig:mu_g}
+\end{figure}
+
+\begin{figure}[htp]
+\centering
+\includegraphics[width=.8\linewidth=]{../csv_output/mu_g_acc_momentum.pdf}
+\caption{mug}
+\label{fig:mu_g}
+\end{figure}
+
