--- a/cnn_results.tex
+++ b/cnn_results.tex
@@ -333,3 +333,5 @@ It was shown that even though CNN10000 was trained with single particle generate
 \section{Classification using CNN100000}
 All future classifications will be done using Selection I Modified CC-Inclusive Filter because it has a higher efficiency and purity than Selection I Original CC-Inclusive Filter. To reiterate, CNN100000 was trained using 20,000 images of each $\mu/\pi/p/\gamma/e$. The results of using CNN100000 to classify BNB+Cosmics will be outlined below.
 \subsection{Classification of MC data using Selection I Modified CC-Inclusive Filter}
+\subsection{Classification of MicroBooNE data using Selection I Modified CC-Inclusive Filter}
+\subsection{Comparing two CC-Inclusive Cross Section Selection Filters}
