--- a/example.tex
+++ b/example.tex
@@ -118,8 +118,8 @@ Syracuse, New York
   %\input{syr_cluster}
   \input{cnn_train}
   \input{cnn_results}
-  \input{data}
-  \input{selImodcompare}
+  %\input{data}
+  %\input{selImodcompare}
   \input{conclusion}
   %% To ignore a specific chapter while working on another, making the build faster, comment it out:
   %\input{chap4}
