--- a/example.tex
+++ b/example.tex
@@ -15,6 +15,7 @@
 \usepackage{mathpazo}
 %\usepackage{euler}
 \usepackage{lineno}
+\usepackage{relsize}
 \linenumbers
 
 %% Put package includes etc. into preamble.tex for convenience
